[gd_scene load_steps=2 format=3 uid="uid://achievement_notification"]

[ext_resource type="Script" path="res://Scripts/AchievementNotification.gd" id="1"]

[node name="AchievementNotification" type="CanvasLayer"]
script = ExtResource("1")

[node name="NotificationContainer" type="VBoxContainer" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -120.0
offset_right = 420.0
offset_bottom = -20.0
grow_vertical = 0
separation = 10

[node name="NotificationTemplate" type="PanelContainer" parent="NotificationContainer"]
custom_minimum_size = Vector2(400, 50)

[node name="MarginContainer" type="MarginContainer" parent="NotificationTemplate"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="NotificationTemplate/MarginContainer"]
layout_mode = 2

[node name="Icon" type="TextureRect" parent="NotificationTemplate/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="NotificationTemplate/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="NameLabel" type="Label" parent="NotificationTemplate/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "成就名称"
theme_override_font_sizes/font_size = 16

[node name="DescLabel" type="Label" parent="NotificationTemplate/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "成就描述"
theme_override_font_sizes/font_size = 12
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
